--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
-    <title>Onboardjs Context Boilerplate</title>
+    <title>Cogapus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
